# medieval-mss

./: .gitignore  ISSUE_TEMPLATE  MS_Laud_Lat_86.xml  Preview  Preview.html  St_John's_College_MS_34.xml  medieval-mss.xpr  places.xml  pyproject.toml  readme.md  works-with-authors.xml  works-without-authors.xml  works.xml
.github/: FUNDING.yml  dependabot.yml
authority/: README.md  authority-schematron.sch  persons_master.xml  previewAuthorities.xsl
collections/: authority-schematron.sch  bodley-msDesc.rng  newProject.xpr
drafts/: Brasenose_College_MS_10.xml  Corpus_Christi_College_MS_20.xml  Corpus_Christi_College_MS_4.xml  MSS_Douce_Or_d_7-12_P.xml  MSS_Egypt_a_18,_19_P.xml  MSS_Egypt_a_20-23_P.xml  MSS_Egypt_a_24,_25_P.xml  MSS_Egypt_a_28,29_P.xml  MSS_Egypt_a_32,33_P.xml  MSS_Egypt_a_35,36_P.xml  MSS_Egypt_a_37,38_P.xml  MSS_Egypt_a_5-8_P.xml  MSS_Egypt_a_9-14_P.xml  MSS_Egypt_b_14,_15_P.xml  MSS_Egypt_b_17,18_P.xml  MSS_Egypt_b_19,20_P.xml  MSS_Egypt_d_10,_11_P.xml  MS_Douce_Or_b_10_P.xml  MS_Douce_Or_b_11.xml  MS_Douce_Or_d_10_P.xml  MS_Douce_Or_d_11_P.xml  MS_Douce_Or_d_12_P.xml  MS_Douce_Or_d_7_P.xml  MS_Douce_Or_d_8_P.xml  MS_Douce_Or_d_9_P.xml  MS_Egypt_a_10_P.xml  MS_Egypt_a_11_P.xml  MS_Egypt_a_12_P.xml  MS_Egypt_a_13_P.xml  MS_Egypt_a_14_P.xml  MS_Egypt_a_15_P.xml  MS_Egypt_a_16_P.xml  MS_Egypt_a_17_P.xml  MS_Egypt_a_18_P.xml  MS_Egypt_a_19_P.xml  MS_Egypt_a_1_P.xml  MS_Egypt_a_2.xml  MS_Egypt_a_20_P.xml  MS_Egypt_a_21_P.xml  MS_Egypt_a_22_P.xml  (+101 more)
processing/: add-author-keys-to-works-authority.xsl  add_work_subjects.py  check_entity_keys.py  (+25 more)
(+31012 files in other folders)
