[project]
name = "medieval-mss"
version = "0.1.0"
description = "Processing scripts and validation tools for Medieval Manuscripts in Oxford Libraries TEI data"
readme = "readme.md"
requires-python = ">=3.13"
authors = [{ name = "Bodleian Libraries" }]

dependencies = ["lxml>=6.0.0"]

[project.urls]
Homepage = "https://medieval.bodleian.ox.ac.uk"
Repository = "https://github.com/bodleian/medieval-mss"

[dependency-groups]
dev = ["lxml-stubs>=0.5.1"]
