[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "medieval-mss"
version = "0.1.0"
description = "Processing scripts and validation tools for Medieval Manuscripts in Oxford Libraries TEI data"
readme = "readme.md"
requires-python = ">=3.14"
authors = [{ name = "Bodleian Libraries" }]
dependencies = ["lxml>=6.0.0", "tei-msdesc-authorities"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://medieval.bodleian.ox.ac.uk"
Repository = "https://github.com/bodleian/medieval-mss"

[dependency-groups]
dev = ["lxml-stubs>=0.5.1", "pytest>=8.4.0"]

[tool.uv.sources]
"tei-msdesc-authorities" = { git = "https://github.com/msDesc/tei-msdesc-authorities" }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["--import-mode=importlib"]
